# AegisOS

./: .gitattributes  .gitignore  ARCHITECTURE.html  BENCHMARKS.md  BETA.md  README.md  SESSIONS.md
.claude/: settings.local.json
compositor/: Cargo.toml  launch-kiosk.sh
compositor/src/: main.rs  state.rs
core-agent/: .gitignore  ARCHITECTURE.md  Cargo.toml
core-agent/agent-daemon/: Cargo.toml
core-agent/agent-daemon/src/: events.rs  main.rs
core-agent/archiso/: build.sh  packages.aegis  test-boot.sh
core-agent/archiso/airootfs/etc/: motd
core-agent/archiso/airootfs/etc/sudoers.d/: aegis-installer
core-agent/archiso/airootfs/etc/systemd/system/: aegis-agent.service  aegis-install.service  aegis-install.target
core-agent/archiso/airootfs/etc/systemd/system/greetd.service.d/: aegis-install-mode.conf
core-agent/archiso/package/: PKGBUILD  aegis-agent.service  aegis-kiosk-launch  aegis-kiosk.service  aegis-session  aegis.install  greetd-config.toml  pam-greetd-greeter  sysusers-aegis.conf  tmpfiles-aegis.conf
core-agent/cgroup-ctl/: Cargo.toml
core-agent/cgroup-ctl/src/: error.rs  handle.rs  lib.rs  self_throttle.rs
core-agent/iso/: aegis-init  aegis-install  aegis-session  aegis-update  build-iso.sh  fake-game  grub.cfg  init  kernel-config.fragment  run-tests.sh  udhcpc-script
core-agent/llm-orchestrator/: Cargo.toml
core-agent/llm-orchestrator/examples/: classify.rs
core-agent/llm-orchestrator/src/: cloud.rs  lib.rs  ollama.rs  orchestrator.rs  policy.rs
core-agent/process-monitor/: Cargo.toml
core-agent/process-monitor/examples/: dump_reaper.rs
core-agent/process-monitor/src/: lib.rs  monitor.rs  protected.rs  steam.rs  types.rs
core-agent/steam-integration/: Cargo.toml
core-agent/steam-integration/examples/: scan_library.rs
core-agent/steam-integration/src/: lib.rs  library.rs  vdf.rs
core-agent/systemd/: aegis-agent.service  install.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.jsx  Installer.jsx  Terminal.jsx  audio.js
frontend/src/sphere/: AegisSphere.js
