[workspace]
resolver = "2"
members = [
    "agent-daemon",
    "process-monitor",
    "cgroup-ctl",
    "steam-integration",
    "llm-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sysinfo = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
