[package]
name = "llm-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
# Cloud escalation only. rustls-backed; kept out of agent-daemon's default
# (and musl/ISO) dependency graph — the daemon links this crate only behind
# its non-default `llm` feature.
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
